# rs-lsp

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
plugin/: build.gradle.kts  gradle.properties  gradlew  gradlew.bat  settings.gradle.kts
plugin/src/main/kotlin/rs2/lsp/: Rs2Annotator.kt  Rs2CommandRegistry.kt  Rs2CompletionContributor.kt  Rs2ConfigDeclTarget.kt  Rs2ConfigDeclarationIndex.kt  Rs2ConfigFile.kt  Rs2ConfigFileType.kt  Rs2ConfigFindUsagesProvider.kt  Rs2ConfigLanguage.kt  Rs2ConfigLexer.kt  Rs2ConfigNav.kt  Rs2ConfigParserDefinition.kt  Rs2ConfigSectionElement.kt  Rs2ConfigSymbolContributor.kt  Rs2ConfigSyntaxHighlighter.kt  Rs2ConfigTokenTypes.kt  Rs2ExtractProcAction.kt  Rs2File.kt  Rs2FileChangeListener.kt  Rs2FileType.kt  Rs2FindUsagesHandlerFactory.kt  Rs2FindUsagesProvider.kt  Rs2FindUsagesWrapper.kt  Rs2GotoDeclarationHandler.kt  Rs2GotoDeclarationWrapper.kt  Rs2IconProvider.kt  Rs2InlayHintsProvider.kt  Rs2InspectionSuppressor.kt  Rs2Language.kt  Rs2Lexer.kt  Rs2LspBinaryManager.kt  Rs2LspServerDescriptor.kt  Rs2LspServerSupportProvider.kt  Rs2ParserDefinition.kt  Rs2ProjectCloseListener.kt  Rs2ReferenceIndex.kt  Rs2RenameHandler.kt  Rs2SpellcheckingStrategy.kt  Rs2StartupActivity.kt  Rs2SyntaxHighlighter.kt  (+8 more)
plugin/src/main/resources/colorSchemes/: Rs2Default.xml
src/: main.rs
